fix nickname align

--- a/src/components/vars.css
+++ b/src/components/vars.css
@@ -122,7 +122,7 @@ body {
 	--yellow-inverted-active: #feedd1;
 	--green-inverted: #f6fbf9;
 	--green-inverted-active: #d9f0e6;
-	--oldcord-version: "9.6.0";
+	--oldcord-version: "9.6.1";
 	--old-green: #43b581;
 	--info-positive-foreground: var(--old-green);
 	--status-positive-background: var(--old-green);
